--- a/company.html
+++ b/company.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="ja">
   <head>
@@ -23,12 +22,13 @@
 
     <div id="fb-root"></div>
     <script>(function(d, s, id) {
-var js, fjs = d.getElementsByTagName(s)[0];
-if (d.getElementById(id)) return;
-js = d.createElement(s); js.id = id;
-js.src = "//connect.facebook.net/ja_JP/sdk.js#xfbml=1&version=v2.6";
-fjs.parentNode.insertBefore(js, fjs);
-    }(document, 'script', 'facebook-jssdk'));</script>
+	var js, fjs = d.getElementsByTagName(s)[0];
+	if (d.getElementById(id)) return;
+	js = d.createElement(s); js.id = id;
+	js.src = "//connect.facebook.net/ja_JP/sdk.js#xfbml=1&version=v2.6";
+	fjs.parentNode.insertBefore(js, fjs);
+    }(document, 'script', 'facebook-jssdk'));
+    </script>
 
     <header>
       <div id="header_in" class="container">
@@ -49,7 +49,7 @@ fjs.parentNode.insertBefore(js, fjs);
                 <li><a href="company.html">会社概要</a></li>
               </ul>
             </div>
-            <!-- sp_navi -->
+            <!-- //end.sp_navi -->
 
             <div class="pc_navi">
 
@@ -60,13 +60,13 @@ fjs.parentNode.insertBefore(js, fjs);
               </ul>
 
             </div>
-            <!-- pc_navi -->
+            <!-- //end.pc_navi -->
 
           </div>
         </div>
-        <!-- row -->
+        <!-- //end.row -->
       </div>
-      <!-- header_in -->
+
     </header>
 
     <div id="sub_cover">
@@ -157,14 +157,14 @@ fjs.parentNode.insertBefore(js, fjs);
           <div class="four columns sp">
             <img class="u-max-full-width" src="images/top/footer_logo.png" alt="株式会社サンプル" srcset="images/top/footer_logo@2x.png 2x" />
           </div>
-          <!-- columns -->
+          <!-- //end.columns -->
           <div class="four columns foot_address sp">
             〒000-0000<br />
             東京都◯◯区◯◯町 560-0-0<br />
             03-0000-0000<br />
             info@xxxxxx.com
           </div>
-          <!-- columns -->
+          <!-- //end.columns -->
           <div class="four columns">
             <ul class="foot_navi">
               <li><a href="index.html">TOPページ</a></li>
@@ -172,17 +172,17 @@ fjs.parentNode.insertBefore(js, fjs);
               <li><a href="company.html">会社概要</a></li>
             </ul>
           </div>
-          <!-- columns -->
+          <!-- //end.columns -->
         </div>
-        <!-- row -->
+        <!-- //end.row -->
 
         <div class="row">
           <div class="twelve columns sp">
             <p class="copy">copyright (C) SampleCompany all rights reserved.</p>
           </div>
-          <!-- columns -->
+          <!-- //end.columns -->
         </div>
-        <!-- row -->
+        <!-- //end.row -->
       </div>
     </footer>
     <!-- //footer -->
@@ -191,21 +191,19 @@ fjs.parentNode.insertBefore(js, fjs);
     <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 
     <script>
-$(function(){
-
-  $(document).ready(function(){
-
-    $("#sp_navi_btn").click(function () {
-      $(this).next().slideToggle();
-    });
-
-  });
-
-});
+	$(function(){
+	
+	  $(document).ready(function(){
+	
+	    $("#sp_navi_btn").click(function () {
+	      $(this).next().slideToggle();
+	    });
+	
+	  });
+	
+	});
     </script>
 
 
   </body>
 </html>
-
-
