--- a/news.html
+++ b/news.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="ja">
 <head>
@@ -21,12 +20,13 @@
 
   <div id="fb-root"></div>
   <script>(function(d, s, id) {
-    var js, fjs = d.getElementsByTagName(s)[0];
-    if (d.getElementById(id)) return;
-    js = d.createElement(s); js.id = id;
-    js.src = "//connect.facebook.net/ja_JP/sdk.js#xfbml=1&version=v2.6";
-    fjs.parentNode.insertBefore(js, fjs);
-  }(document, 'script', 'facebook-jssdk'));</script>
+	var js, fjs = d.getElementsByTagName(s)[0];
+	if (d.getElementById(id)) return;
+	js = d.createElement(s); js.id = id;
+	js.src = "//connect.facebook.net/ja_JP/sdk.js#xfbml=1&version=v2.6";
+	fjs.parentNode.insertBefore(js, fjs);
+	}(document, 'script', 'facebook-jssdk'));
+  </script>
 
 <header>
   <div id="header_in" class="container">
@@ -47,7 +47,7 @@
             <li><a href="company.html">会社概要</a></li>
           </ul>
         </div>
-        <!-- sp_navi -->
+        <!-- //end.sp_navi -->
 
         <div class="pc_navi">
 
@@ -58,13 +58,12 @@
           </ul>
 
         </div>
-        <!-- pc_navi -->
+        <!-- //end.pc_navi -->
 
       </div>
     </div>
-    <!-- row -->
+    <!-- //end.row -->
   </div>
-  <!-- header_in -->
 </header>
 
 <div id="sub_cover">
@@ -129,14 +128,14 @@
       <div class="four columns sp">
         <img class="u-max-full-width" src="images/top/footer_logo.png" alt="株式会社サンプル" srcset="images/top/footer_logo@2x.png 2x" />
       </div>
-      <!-- columns -->
+      <!-- //end.columns -->
       <div class="four columns foot_address sp">
         〒000-0000<br />
         東京都◯◯区◯◯町 560-0-0<br />
         03-0000-0000<br />
         info@xxxxxx.com
       </div>
-      <!-- columns -->
+      <!-- //end.columns -->
       <div class="four columns">
         <ul class="foot_navi">
           <li><a href="index.html">TOPページ</a></li>
@@ -144,25 +143,21 @@
           <li><a href="company.html">会社概要</a></li>
         </ul>
       </div>
-      <!-- columns -->
     </div>
-    <!-- row -->
+    <!-- //end.row -->
 
     <div class="row">
       <div class="twelve columns sp">
         <p class="copy">copyright (C) SampleCompany all rights reserved.</p>
       </div>
-      <!-- columns -->
+      <!-- //end.columns -->
     </div>
-    <!-- row -->
+    <!-- //end.row -->
   </div>
 </footer>
 <!-- //footer -->
 
-
-
 <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-
 <script>
   $(function(){
 
@@ -180,5 +175,3 @@
 
 </body>
 </html>
-
-
